Prevent overlap in ticket attachments

--- a/packages/portal-style/src/modules/_post-attachments.scss
+++ b/packages/portal-style/src/modules/_post-attachments.scss
@@ -17,7 +17,7 @@
     display: block;
     align-items: center;
     position: relative;
-    padding: 0 80px 0 0;
+    padding: 0 100px 0 0;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
